--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <button id="no" type="button" class="btn btn-info btn-lg"></button>
       </div>
     </div>
-    <audio src="https://www.youtube.com/watch?v=dsri8IJI6rY" autoplay></audio>
+    <audio src="./sound/sound2.mp3" type="audio/mpeg" autoplay></audio>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
