--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <button id="no" type="button" class="btn btn-info btn-lg"></button>
       </div>
     </div>
+    <source src="https://sonminhle.github.io/tang-crush/sound/sound2.mp3" type="audio/mp3" aria-hidden = "true" autoplay>
     <audio src="./sound/sound2.mp3" type="audio/mpeg" autoplay></audio>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
