--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
     </div>
     <source src="https://sonminhle.github.io/tang-crush/sound/sound2.mp3" type="audio/mp3" aria-hidden = "true" autoplay>
-    <audio src="./sound/sound2.mp3" type="audio/mpeg" autoplay></audio>
+    <audio src="https://sonminhle.github.io/tang-crush//sound/sound2.mp3" type="audio/mpeg" autoplay></audio>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
