--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
    
     <audio autoplay>
-     <source src="https://sonminhle.github.io/tang-crush/sound/sound2.mp3" type="audio/mp3" aria-hidden = "true" autoplay></audio>
+     <source src="https://www.youtube.com/watch?v=2lTZeMiTfMA" type="audio/mp3" aria-hidden = "true" autoplay></audio>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
