--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       </div>
     </div>
    
-    <audio autoplay>
-     <source src="https://www.youtube.com/watch?v=2lTZeMiTfMA" type="audio/mp3" aria-hidden = "true" autoplay></audio>
+    <audio src="https://www.youtube.com/watch?v=2lTZeMiTfMA" type="audio/mp3" aria-hidden = "true" autoplay></audio>
+     <source src="https://www.youtube.com/watch?v=2lTZeMiTfMA" type="audio/mp3" aria-hidden = "true" autoplay>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
